Fix issue with text-rendering and cursor flicker.
Instead of using the two distinct classes,
use keyframes and limit transitions to opacity.

For text-rendering issues, force 3D acceleration on
as long as the tooltip is visible. Keeps the text
rendering the same in Safari, and removes popping.
Does alter the look unfortunately (aliasing).

Fixes #2 and #3

--- a/jquery.tipfivethree.css
+++ b/jquery.tipfivethree.css
@@ -96,24 +96,41 @@
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
+
+	animation: tipFiveThree-opening 0.5s;
+	-webkit-animation: tipFiveThree-opening 0.5s;
+	transition: opacity 0.5s ease-in-out;
+	-webkit-transition: opacity 0.5s ease-in-out;
+	animation-fill-mode: forwards;
+	-webkit-animation-fill-mode: forwards;
 }
 
 /**
  * Opening animation
  */
 
-.tipFiveThree-spawn {
-	opacity: 0;
-	-webkit-transform: scale(0.2, 0.2) skewX(10deg);
-	transform: scale(0.2, 0.2) skewX(10deg);
+@-webkit-keyframes tipFiveThree-opening {
+	0% {
+		opacity: 0;
+		-webkit-transform: scale(0.2, 0.2);
+	}
+
+	100% {
+		opacity: 1;
+		-webkit-transform: scale(1, 1);
+	}
 }
 
-.tipFiveThree-open {
-	-webkit-transition: all 0.5s ease-in-out;
-	transition: all 0.5s ease-in-out;
-	opacity: 1;
-	-webkit-transform: scale(1, 1) skewX(0deg);
-	transform: scale(1, 1) skewX(0deg);
+@keyframes tipFiveThree-opening {
+	0% {
+		opacity: 0;
+		transform: scale(0.2, 0.2);
+	}
+
+	100% {
+		opacity: 1;
+		transform: scale(1, 1);
+	}
 }
 
 /**
